@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008-2016 by Walter Brisken                             *
+ *   Copyright (C) 2008-2018 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -53,7 +53,8 @@ struct CommandLineOptions
 	int sniffAllBins;
 	int alwaysWriteAutocorr;
 	int profileMode;
-        int skipExtraAutocorrs;
+	int skipExtraAutocorrs;
+	int maxJobsToMerge;	/* <=0 means no limit */
 	/* some overrides */
 	int specAvg;
 	int doalldifx;
